kubernetes/vpn/network-policy-vpn.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpn-security-policy
  namespace: vpn
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow WireGuard UDP handshake port publicly
  - ports:
    - protocol: UDP
      port: 51820
  # Allow incoming from rabbitmq namespace
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: rabbitmq
  # Allow incoming from default namespace
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
  # Allow intracluster vpn pod traffic
  - from:
    - podSelector: {}
  egress:
  # Allow all egress for routing
  - {}
